--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
   --red: #ffe0e0;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .body {
   display: flex;
   justify-content: center;
@@ -21,7 +25,6 @@
   align-items: center;
   padding: 17px;
   max-width: 886px;
-  width: 100%;
 }
 
 #quiz-container {
@@ -38,8 +41,8 @@
 
 .quiz__question-block {
   flex-grow: 1;
-  width: 800px;
   max-height: 450px;
+  width: 800px;
   padding: 40px;
   margin-bottom: 20px;
   border-radius: 20px;
@@ -167,4 +170,59 @@
   position: absolute;
   left: 0;
   font-weight: 700;
+}
+
+@media (max-width: 1024px) {
+  .quiz__question-block {
+    width: 650px;
+    min-width: auto;
+    padding: 30px;
+  }
+}
+
+@media (max-width: 768px) {
+  .quiz__title {
+    font-size: 36px;
+  }
+  .quiz__question-block {
+    width: 540px;
+    margin-bottom: 10px;
+  }
+  .quiz__option {
+    margin-bottom: 16px;
+    align-items: center;
+  }
+  .quiz__question {
+    font-size: 18px;
+  }
+  .quiz__radio {
+    width: 15px;
+    height: 15px;
+  }
+  .quiz__label {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 600px) {
+  #quiz__result-container {
+    padding: 30px 0 80px;
+  }
+  .quiz__question-block {
+    padding: 15px;
+  }
+  .quiz__question-block {
+    width: 400px;
+  }
+  .quiz__text {
+    font-size: 18px;
+  }
+  .quiz__result-item {
+    padding: 20px;
+    font-size: 14px;
+  }
+  .quiz__answer-question {
+    margin-bottom: 5px;
+    font-size: 18px;
+  }
 }
